# duckdb-airport-extension

./: .gitmodules  CMakeLists.txt  vcpkg.json
src/: airport_extension.cpp  airport_take_flight_custom.cpp  to_substrait.cpp
src/include/: airport_extension.hpp  airport_flight_stream.hpp
src/include/storage/: airport_exchange.hpp
